--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-# Virtual Environment
+# Virtual Environment (your specific venv folder)
 research_agent/
 venv/
 env/
 ENV/
-.venv
+.venv/
 
-# Environment Variables
+# Environment Variables - CRITICAL
 .env
 .env.local
 .env.development.local
@@ -35,111 +35,43 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-*.manifest
-*.spec
 pip-log.txt
 pip-delete-this-directory.txt
+.pytest_cache/
+.coverage
+htmlcov/
 
-# PyCharm
-.idea/
-
-# VS Code
-.vscode/
-
-# Node.js / Next.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Node.js / Next.js (frontend specific)
 frontend/node_modules/
 frontend/.next/
 frontend/out/
 frontend/build/
-
-# Next.js build output
+node_modules/
 .next/
 out/
-
-# Testing
-.coverage
-.pytest_cache/
-htmlcov/
-.tox/
-.nox/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Windows
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-*.stackdump
-[Dd]esktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-*.lnk
-
-# Linux
-*~
-.fuse_hidden*
-.directory
-.Trash-*
-.nfs*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
 # IDEs
+.vscode/
+.idea/
 *.swp
 *.swo
 *.swn
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-*.sublime-project
+.DS_Store
 
 # Logs
-logs/
 *.log
-backend/*.log
-frontend/*.log
+logs/
 
-# Database
-*.sqlite
-*.sqlite3
-*.db
-
-# Temporary files
+# OS files
+.DS_Store
+Thumbs.db
 *.tmp
 *.temp
-tmp/
-temp/
-
-# OS generated files
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
 
 # Deployment
 .vercel
 .railway
-
-# Local development
-.env.backup
-.env.production
-*.local
