--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,159 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.1
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.11.0
-attrs==25.4.0
-cachetools==6.2.1
-certifi==2025.10.5
-charset-normalizer==3.4.4
-click==8.3.0
-colorama==0.4.6
-dataclasses-json==0.6.7
-distro==1.9.0
-fastapi==0.115.0
-frozenlist==1.8.0
+# ============================================================================
+# Deep Research Agent - Python Dependencies
+# ============================================================================
+
+# ----------------------------------------------------------------------------
+# Web Framework & ASGI Server
+# ----------------------------------------------------------------------------
+fastapi==0.115.0              # Modern web framework with automatic API docs
+uvicorn==0.30.6               # Lightning-fast ASGI server
+starlette==0.38.6             # FastAPI's foundation
+sse-starlette==2.1.3          # Server-Sent Events support
+
+# ----------------------------------------------------------------------------
+# LangChain & LangGraph - Core AI Framework
+# ----------------------------------------------------------------------------
+langchain==0.3.2              # LLM framework for building applications
+langchain-core==0.3.63        # Core abstractions and base classes
+langchain-community==0.3.1    # Community-contributed integrations
+langgraph==0.2.28             # State machine orchestration for workflows
+langgraph-checkpoint==1.0.12  # Checkpoint management for LangGraph
+langsmith==0.1.147            # LangChain tracing and monitoring
+
+# ----------------------------------------------------------------------------
+# LLM Providers
+# ----------------------------------------------------------------------------
+langchain-openai==0.2.2       # OpenAI integration for LangChain
+openai==1.109.1               # OpenAI Python client
+langchain-google-genai==2.0.3 # Google Gemini integration
+google-generativeai==0.8.5    # Google Generative AI SDK
 google-ai-generativelanguage==0.6.15
-google-api-core==2.27.0
+
+# ----------------------------------------------------------------------------
+# Search Tools
+# ----------------------------------------------------------------------------
+tavily-python==0.4.0          # Tavily search API client
+google_search_results==2.4.2  # SerpAPI client
+
+# ----------------------------------------------------------------------------
+# Data Validation & Serialization
+# ----------------------------------------------------------------------------
+pydantic==2.9.2               # Data validation using Python type hints
+pydantic-settings==2.5.2      # Settings management with Pydantic
+pydantic_core==2.23.4         # Pydantic's Rust core
+dataclasses-json==0.6.7       # Dataclass ↔ JSON serialization
+marshmallow==3.26.1           # Object serialization framework
+
+# ----------------------------------------------------------------------------
+# Google Cloud & Auth
+# ----------------------------------------------------------------------------
+google-api-core==2.27.0       # Google API client core
 google-api-python-client==2.185.0
-google-auth==2.41.1
+google-auth==2.41.1           # Google authentication library
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-google_search_results==2.4.2
 googleapis-common-protos==1.71.0
-greenlet==3.2.4
-grpcio==1.76.0
+grpcio==1.76.0                # gRPC framework
 grpcio-status==1.71.2
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.31.0
-httptools==0.7.1
-httpx==0.28.1
-idna==3.11
-jiter==0.11.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.2
-langchain-community==0.3.1
-langchain-core==0.3.63
-langchain-google-genai==2.0.3
-langchain-openai==0.2.2
-langchain-text-splitters==0.3.8
-langgraph==0.2.28
-langgraph-checkpoint==1.0.12
-langsmith==0.1.147
-marshmallow==3.26.1
-msgpack==1.1.2
-multidict==6.7.0
-mypy_extensions==1.1.0
-numpy==1.26.4
-openai==1.109.1
-orjson==3.11.4
-packaging==24.2
-propcache==0.4.1
-proto-plus==1.26.1
-protobuf==5.29.5
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.9.2
-pydantic-settings==2.5.2
-pydantic_core==2.23.4
-pyparsing==3.2.5
-python-dotenv==1.1.1
-PyYAML==6.0.3
-regex==2025.10.23
-requests==2.32.5
-requests-toolbelt==1.0.0
-rsa==4.9.1
-sniffio==1.3.1
-SQLAlchemy==2.0.44
-sse-starlette==2.1.3
-starlette==0.38.6
-tavily-python==0.4.0
-tenacity==8.5.0
-tiktoken==0.12.0
-tqdm==4.67.1
-typing-inspect==0.9.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.30.6
-watchfiles==1.1.1
-websockets==15.0.1
-yarl==1.22.0
+
+# ----------------------------------------------------------------------------
+# HTTP Clients & Networking
+# ----------------------------------------------------------------------------
+requests==2.32.5              # HTTP library
+requests-toolbelt==1.0.0      # Useful request utilities
+httpx==0.28.1                 # Modern async HTTP client
+httpcore==1.0.9               # HTTP core library
+httplib2==0.31.0              # HTTP client library
+httptools==0.7.1              # Fast HTTP parser
+h11==0.16.0                   # HTTP/1.1 protocol implementation
+urllib3==2.5.0                # HTTP client
+aiohttp==3.13.1               # Async HTTP client
+aiohappyeyeballs==2.6.1       # Fast connection for aiohttp
+
+# ----------------------------------------------------------------------------
+# Async & Concurrency
+# ----------------------------------------------------------------------------
+anyio==4.11.0                 # Async compatibility layer
+aiosignal==1.4.0              # Async signal management
+greenlet==3.2.4               # Lightweight concurrent programming
+
+# ----------------------------------------------------------------------------
+# Configuration & Environment
+# ----------------------------------------------------------------------------
+python-dotenv==1.1.1          # Load environment variables from .env
+
+# ----------------------------------------------------------------------------
+# Database & Storage
+# ----------------------------------------------------------------------------
+SQLAlchemy==2.0.44            # SQL toolkit and ORM
+
+# ----------------------------------------------------------------------------
+# Data Processing & Utilities
+# ----------------------------------------------------------------------------
+numpy==1.26.4                 # Numerical computing
+tiktoken==0.12.0              # Fast BPE tokenizer for OpenAI models
+langchain-text-splitters==0.3.8  # Text splitting utilities
+jsonpatch==1.33               # JSON Patch implementation
+jsonpointer==3.0.0            # JSON Pointer implementation
+msgpack==1.1.2                # Efficient binary serialization
+orjson==3.11.4                # Fast JSON library
+PyYAML==6.0.3                 # YAML parser
+
+# ----------------------------------------------------------------------------
+# Type System & Inspection
+# ----------------------------------------------------------------------------
+typing_extensions==4.15.0     # Backported type hints
+typing-inspect==0.9.0         # Runtime type inspection
+typing-inspection==0.4.2      # Type inspection utilities
+mypy_extensions==1.1.0        # Extensions for mypy
+
+# ----------------------------------------------------------------------------
+# CLI & Terminal
+# ----------------------------------------------------------------------------
+click==8.3.0                  # CLI creation kit
+colorama==0.4.6               # Cross-platform colored terminal text
+tqdm==4.67.1                  # Progress bars
+
+# ----------------------------------------------------------------------------
+# Parsing & Text Processing
+# ----------------------------------------------------------------------------
+pyparsing==3.2.5              # Parsing library
+regex==2025.10.23             # Alternative regex implementation
+
+# ----------------------------------------------------------------------------
+# Protocol Buffers & Serialization
+# ----------------------------------------------------------------------------
+proto-plus==1.26.1            # Protocol Buffers wrapper
+protobuf==5.29.5              # Protocol Buffers library
+
+# ----------------------------------------------------------------------------
+# Security & Cryptography
+# ----------------------------------------------------------------------------
+certifi==2025.10.5            # Mozilla's CA bundle
+pyasn1==0.6.1                 # ASN.1 library
+pyasn1_modules==0.4.2         # ASN.1 modules
+rsa==4.9.1                    # Pure-Python RSA
+
+# ----------------------------------------------------------------------------
+# Caching & Utilities
+# ----------------------------------------------------------------------------
+cachetools==6.2.1             # Caching utilities
+tenacity==8.5.0               # Retry library
+packaging==24.2               # Core utilities for Python packages
+distro==1.9.0                 # Linux distribution detection
+uritemplate==4.2.0            # URI template implementation
+
+# ----------------------------------------------------------------------------
+# Low-Level Utilities
+# ----------------------------------------------------------------------------
+attrs==25.4.0                 # Classes without boilerplate
+annotated-types==0.7.0        # Reusable constraint types
+charset-normalizer==3.4.4     # Character encoding detection
+idna==3.11                    # Internationalized domain names
+jiter==0.11.1                 # Fast JSON iterator
+sniffio==1.3.1                # Async library detection
+frozenlist==1.8.0             # Immutable list
+multidict==6.7.0              # Multivalue dictionary
+propcache==0.4.1              # Property caching
+yarl==1.22.0                  # Yet another URL library
+watchfiles==1.1.1             # File system event monitoring
+websockets==15.0.1            # WebSocket implementation
