--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "dotenv": "16.4.5",
-    "next": "^14.2.33",
+    "next": "14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.6.3"
